--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
     <header class="scale-in">
       <span class="badge">
         <span class="badge-dot"></span>
-        Curso 2025-2026 · Becas del Gobierno · Ingreso CPA Politécnica
+        Curso 2026 · Becas del Gobierno · Ingreso CPA Politécnica
       </span>
       <div class="hero-grid">
         <div>
@@ -457,7 +457,7 @@
       <div class="grid-2">
         <!-- Curso Becas del Gobierno -->
         <div class="card">
-          <h3>Curso Preparación Becas del Gobierno 2025</h3>
+          <h3>Curso Preparación Becas del Gobierno 2026</h3>
           <p class="section-subtitle">Pensado para que llegues seguro al examen, sin miedo a Matemáticas ni Castellano.</p>
           <ul>
             <li><strong>Matemáticas:</strong> lunes, miércoles y viernes</li>
@@ -585,3 +585,4 @@
   </script>
 </body>
 </html>
+
