--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
           <ul>
             <li><strong>Horario intensivo:</strong> 08:00 a 12:00 y 13:00 a 17:00 hs</li>
             <li><strong>Modalidad:</strong> 100% presencial</li>
-            <li><strong>Grupo único:</strong> cupos realmente limitados.</li>
+            <li><strong>Grupo único:</strong> cupos limitados.</li>
           </ul>
           <p class="price-box">330.000 Gs mensuales</p>
           <p class="price-note">Matrícula <strong>exonerada</strong> por promoción.</p>
@@ -551,7 +551,7 @@
             </a>
           </div>
           <p class="cta-small">
-            Recordá: los grupos son reducidos y los cupos son realmente limitados.
+            Recordá: son grupos únicos con cupos limitados.
           </p>
         </div>
       </div>
@@ -585,5 +585,6 @@
   </script>
 </body>
 </html>
+
 
 
